@@ -17,11 +17,14 @@ import com.powsybl.openloadflow.OpenLoadFlowParameters;
 import com.powsybl.openloadflow.OpenLoadFlowProvider;
 import com.powsybl.openloadflow.ac.outerloop.AcIncrementalPhaseControlOuterLoop;
 import com.powsybl.openloadflow.ac.solver.AcSolverStatus;
+import com.powsybl.openloadflow.ac.solver.NewtonRaphsonStoppingCriteriaType;
 import com.powsybl.openloadflow.network.*;
 import com.powsybl.openloadflow.network.impl.Networks;
 import com.powsybl.openloadflow.util.PerUnit;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 
 import java.util.List;
 
@@ -633,7 +636,7 @@ class AcLoadFlowPhaseShifterTest {
 
         LfNetworkParameters lfNetworkParameters = new LfNetworkParameters()
                 .setPhaseControl(true);
-        LfNetwork lfNetwork = Networks.load(network, lfNetworkParameters).get(0);
+        LfNetwork lfNetwork = Networks.load(network, lfNetworkParameters).getFirst();
         AcLoadFlowParameters acParameters = new AcLoadFlowParameters()
                 .setNetworkParameters(lfNetworkParameters)
                 .setMatrixFactory(new DenseMatrixFactory());
@@ -694,5 +697,77 @@ class AcLoadFlowPhaseShifterTest {
         assertActivePowerEquals(0.0, line2.getTerminal1());
         assertEquals(1, t2wt.getPhaseTapChanger().getSolvedTapPosition());
         assertEquals(0, t2wt.getPhaseTapChanger().getTapPosition());
+    }
+
+    @ParameterizedTest
+    @CsvSource(useHeadersInDisplayName = true, textBlock = """
+             twtSplitShuntAdmittance, tap0p1,  tap0p2, tap1p1,  tap1p2, tap2p1,  tap2p2, vectorized
+             false,                   19.640, -19.470, 51.597, -51.016, 95.497, -92.751, false
+             true,                    19.633, -19.464, 51.573, -50.995, 95.428, -92.693, false
+             false,                   19.640, -19.470, 51.597, -51.016, 95.497, -92.751, true
+             true,                    19.633, -19.464, 51.573, -50.995, 95.428, -92.693, true
+            """
+    )
+    void rxgbChangeOnPstControlTest(boolean twtSplitShuntAdmittance,
+                                                 double tap0p1, double tap0p2, double tap1p1, double tap1p2, double tap2p1, double tap2p2, boolean vectorized) {
+        AcLoadFlowParameters.VECTORIZED_DEFAULT_VALUE = vectorized; // Test with and without AcEquationSystem vectorization
+        selectNetwork(PhaseControlFactory.createNetworkWithT2wtExaggerateRxgbTable());
+
+        parameters
+                .setPhaseShifterRegulationOn(true)
+                .setTwtSplitShuntAdmittance(twtSplitShuntAdmittance);
+        parametersExt
+                .setPhaseShifterControlMode(OpenLoadFlowParameters.PhaseShifterControlMode.INCREMENTAL)
+                .setNewtonRaphsonStoppingCriteriaType(NewtonRaphsonStoppingCriteriaType.PER_EQUATION_TYPE_CRITERIA)
+                .setMaxActivePowerMismatch(1e-3)
+                .setMaxReactivePowerMismatch(1e-3);
+
+        // capture values, no regulation, tap 0
+        t2wt.getPhaseTapChanger().setTapPosition(0).setRegulating(false);
+
+        LoadFlowResult result = loadFlowRunner.run(network, parameters);
+        assertTrue(result.isFullyConverged());
+        assertActivePowerEquals(tap0p1, t2wt.getTerminal1());
+        assertActivePowerEquals(tap0p2, t2wt.getTerminal2());
+
+        // capture values, no regulation, tap 1
+        t2wt.getPhaseTapChanger().setTapPosition(1);
+        result = loadFlowRunner.run(network, parameters);
+        assertTrue(result.isFullyConverged());
+        assertActivePowerEquals(tap1p1, t2wt.getTerminal1());
+        assertActivePowerEquals(tap1p2, t2wt.getTerminal2());
+
+        // capture values, no regulation, tap 2
+        t2wt.getPhaseTapChanger().setTapPosition(2);
+        result = loadFlowRunner.run(network, parameters);
+        assertTrue(result.isFullyConverged());
+        assertActivePowerEquals(tap2p1, t2wt.getTerminal1());
+        assertActivePowerEquals(tap2p2, t2wt.getTerminal2());
+
+        // set at tap 0, enable regulation to have PST moving to tap 1
+        t2wt.getPhaseTapChanger().setTapPosition(0)
+                .setRegulationMode(PhaseTapChanger.RegulationMode.ACTIVE_POWER_CONTROL)
+                .setRegulationValue(-65.)
+                .setTargetDeadband(10.)
+                .setRegulating(true);
+        result = loadFlowRunner.run(network, parameters);
+        assertTrue(result.isFullyConverged());
+        assertEquals(1, t2wt.getPhaseTapChanger().getSolvedTapPosition());
+        assertActivePowerEquals(tap1p1, t2wt.getTerminal1());
+        assertActivePowerEquals(tap1p2, t2wt.getTerminal2());
+
+        // set at tap 0, enable regulation to have PST moving to tap 2
+        t2wt.getPhaseTapChanger().setTapPosition(0)
+                .setRegulationMode(PhaseTapChanger.RegulationMode.ACTIVE_POWER_CONTROL)
+                .setRegulationValue(-100.)
+                .setTargetDeadband(10.)
+                .setRegulating(true);
+        result = loadFlowRunner.run(network, parameters);
+        assertTrue(result.isFullyConverged());
+        assertEquals(2, t2wt.getPhaseTapChanger().getSolvedTapPosition());
+        assertActivePowerEquals(tap2p1, t2wt.getTerminal1());
+        assertActivePowerEquals(tap2p2, t2wt.getTerminal2());
+
+        AcLoadFlowParameters.VECTORIZED_DEFAULT_VALUE = true; // Restoring initial static value to avoid interference with other tests
     }
 }
